deploy/k8s/components/local-services/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app.kubernetes.io/component: postgres
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: katilim-analiz
    app.kubernetes.io/component: postgres
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
